# Automotive_Software

./: .gitignore
1017/: execute_ttc  ttc_styleguide_noncompliant.cpp
automotive_software/resources/rviz/: ros2_practice.rviz
automotive_software/src/app/simulator/launch/: simulation.launch.xml
automotive_software/src/app/simulator/src/lane_detection/: lane_detection_node.cpp
automotive_software/src/app/simulator/src/vehicle/: vehicle_simulator_node.cpp
automotive_software_final/resources/rviz/: ros2_practice.rviz
automotive_software_final/src/app/autonomous_driving/launch/: autonomous_driving.launch.xml
automotive_software_final/src/app/evaluation/: CMakeLists.txt
automotive_software_final/src/app/evaluation/include/: evaluation_algorithm.hpp
automotive_software_final/src/app/mission_manager/: CMakeLists.txt
automotive_software_final/src/app/mission_manager/include/: mission_manager_node.hpp
automotive_software_final/src/app/mission_manager/src/: mission_manager_node.cpp
automotive_software_final/src/bsw/system/bridge/: ros2_bridge_mission.hpp
automotive_software_final/src/bsw/system/interface/: interface_lane.cpp
automotive_software_lon/: launch.sh
automotive_software_lon/src/app/autonomous_driving/include/: autonomous_driving.hpp
automotive_software_lon/src/app/autonomous_driving/src/: autonomous_driving.cpp
automotive_software_practice/: launch.sh
automotive_software_practice/resources/rviz/: ros2_practice.rviz
automotive_software_practice/src/app/autonomous_driving/: CMakeLists.txt
automotive_software_practice/src/app/autonomous_driving/include/: autonomous_driving.hpp
automotive_software_practice/src/app/autonomous_driving/launch/: autonomous_driving.launch.xml
automotive_software_practice/src/app/autonomous_driving/src/: autonomous_driving.cpp
automotive_software_practice/src/app/evaluation/: CMakeLists.txt
automotive_software_practice/src/app/evaluation/include/: evaluation_algorithm.hpp  evaluation_node.hpp
automotive_software_practice/src/app/evaluation/launch/: evaluation.launch.xml
automotive_software_practice/src/app/evaluation/src/: evaluation_algorithm.cpp  evaluation_node.cpp
automotive_software_practice/src/app/scenario_runner/: CMakeLists.txt  package.xml
automotive_software_practice/src/app/scenario_runner/include/: scenario_algorithm.hpp  scenario_runner_node.hpp
automotive_software_practice/src/app/scenario_runner/launch/: scenario_runner.launch.xml
automotive_software_practice/src/app/scenario_runner/src/: scenario_algorithm.cpp  scenario_runner_node.cpp
automotive_software_practice/src/app/simulator/include/display/: display_node.hpp
automotive_software_practice/src/app/simulator/include/lane_detection/: lane_detection_node.hpp
automotive_software_practice/src/app/simulator/launch/: simulation.launch.xml
automotive_software_practice/src/app/simulator/src/display/: display_node.cpp
automotive_software_practice/src/app/simulator/src/lane_detection/: lane_detection_node.cpp
automotive_software_practice/src/bsw/system/interface/: interface_scenario.hpp
automotive_software_practice/src/rte/msg/ad_msgs/: CMakeLists.txt
automotive_software_practice/src/rte/msg/ad_msgs/msg/: Obstacles.msg
ros2_tutorial_ws/src/box_maker/: CMakeLists.txt  package.xml
ros2_tutorial_ws/src/box_maker/src/: box_publisher.cpp
ros2_tutorial_ws/src/cpp_parameters/: CMakeLists.txt  package.xml
ros2_tutorial_ws/src/cpp_pubsub/: CMakeLists.txt  package.xml
ros2_tutorial_ws/src/more_interfaces/: CMakeLists.txt  package.xml
ros2_tutorial_ws/src/my_package/: package.xml
ros2_tutorial_ws/src/simple_project/launch/: simple_project.xml
ros2_tutorial_ws/src/simple_project/src/color_changer/: CMakeLists.txt  package.xml
ros2_tutorial_ws/src/simple_project/src/color_changer/include/: color_changer.hpp
ros2_tutorial_ws/src/simple_project/src/color_changer/src/: change_color_oneshot.cpp  color_changer.cpp
ros2_tutorial_ws/src/simple_project/src/hmi/: CMakeLists.txt  package.xml
ros2_tutorial_ws/src/simple_project/src/hmi/include/: visualizer.hpp
ros2_tutorial_ws/src/simple_project/src/hmi/src/: visualizer.cpp
ros2_tutorial_ws/src/simple_project/src/moving_turtle/: CMakeLists.txt  package.xml
ros2_tutorial_ws/src/simple_project/src/moving_turtle/include/: moving_turtle.hpp
ros2_tutorial_ws/src/simple_project/src/moving_turtle/src/: moving_turtle.cpp
ros2_tutorial_ws/src/simple_project/src/my_msgs/: CMakeLists.txt  package.xml
ros2_tutorial_ws/src/simple_project/src/my_msgs/msg/: TurtleState.msg
ros2_tutorial_ws/src/tutorial_interfaces/: CMakeLists.txt  package.xml
